Added Html login form

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <h1>MY-GITS</h1>
+    <form>
+      <input type="Email" placeholder="Enter Your Email" />
+      <input type="Password" placeholder="Enter Your Password" />
+      <input type="Submit" value="Login" />
+    </form>
   </body>
 
   <script src="script.js"></script>
