--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GITHUB REPO ES</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>MY-GITS</h1>
+    <h1>MY-GITS ARE AWESOME!!</h1>
     <form>
       <input type="Email" placeholder="Enter Your Email" />
       <input type="Password" placeholder="Enter Your Password" />
